09 Apr 2004 Aron Griffis <agriffis@gentoo.org>
	* Add ability to modify all keywords via all, ~all, or -all, for
	  example: ekeyword -all ~alpha ia64 blah.ebuild

31 Mar 2004 Aron Griffis <agriffis@gentoo.org>
	* Fix bug 28426 with patch from Mr_Bones_ to keep ekeyword from confusing
	  ppc and ppc64

2004-01-12 Aron Griffis <agriffis@gentoo.org>
	* Allow multiple keywords

2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added Makefile