@@ -6,14 +6,17 @@
 
 include ../../makedefs.mak
 
-all:
-	echo "ALBACETE (AL-ba-seet n.) A single surprisingly long hair growing in the middle of nowhere."
+%.1 : %.pod
+	pod2man $< > $@
 
-dist:
+.PHONY: all
+all: ekeyword.1
+
+dist: ekeyword.1
 	mkdir -p ../../$(distdir)/src/ekeyword
 	cp {Makefile,AUTHORS,README,TODO,ChangeLog,ekeyword,ekeyword.1} ../../$(distdir)/src/ekeyword/
 
-install:
+install: all
 	install -m 0755 ekeyword $(bindir)/
 	install -d $(docdir)/ekeyword
 	install -m 0644 {AUTHORS,README,TODO,ChangeLog} $(docdir)/ekeyword/
