@@ -1,12 +1,0 @@
-.TH ekeyword "1" "Nov 2003" "gentoolkit"
-.SH NAME
-ekeyword \- Gentoo: ebuild Keyword Changer
-.SH SYNOPSIS
-.B ekeyword
-.SH BUGS
-This tool does not yet have a man page. Feel free to submit a bug about it to
-http://bugs.gentoo.org
-.SH AUTHORS
-This informative man page was written by Karl Trygve Kalleberg 
-<karltk@gentoo.org>.
-
